feat: 实现promise.all

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,5 @@
     <div id="main"></div>
   </body>
 </html>
-<!-- <script src="../src/deepClone/testfunc.js"></script> -->
-<script src="../src/deepClone/index.js"></script>
-<script src="../src/deepClone/test.js"></script>
+<script src="../src/promise/all/index.js"></script>
+<script src="../src/promise/all/test.js"></script>
