feat: 实现promise.race

--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,5 @@
     <div id="main"></div>
   </body>
 </html>
-<script src="../src/promise/all/index.js"></script>
-<script src="../src/promise/all/test.js"></script>
+<script src="../src/promise/race/index.js"></script>
+<script src="../src/promise/race/test.js"></script>
