feat: 实现数组的every

--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,5 @@
     <div id="main"></div>
   </body>
 </html>
-<script src="../src/filter/index.js"></script>
-<script src="../src/filter/test.js"></script>
+<script src="../src/every/index.js"></script>
+<script src="../src/every/test.js"></script>
